Readability fixes for the default DocFX theme

--- a/docs/template/mr-webrtc/styles/main.css
+++ b/docs/template/mr-webrtc/styles/main.css
@@ -44,3 +44,61 @@ article[data-uid="index"] h2 ~ ul > li > ul > li > ul {
   padding-left: 15px;
   list-style-type: circle;
 }
+
+/** Change the default color of code and links **/
+
+code {
+  color: #717374;
+  background-color: #f1f2f3;
+}
+
+a code {
+  color: #337ab7; /** Same as standard links **/
+  background-color: #f1f2f3;
+}
+
+a code:hover {
+  text-decoration: underline;
+}
+
+.hljs-keyword {
+  color: rgb(86,156,214);
+}
+
+.hljs-string {
+  color: rgb(214, 157, 133);
+}
+
+pre {
+  border: 0;
+}
+
+/** Color theme for API **/
+
+/** These are not important, tune down **/
+.decalaration, .fieldValue, .parameters, .returns {
+  color: #a2a2a2;
+}
+
+/** Major sections, increase visibility **/
+#fields, #properties, #methods, #events {
+    color: #337ac4;
+    font-weight: bold;
+    margin-top: 2em;
+}
+
+article h4 {
+  border: 0;
+  font-weight: bold;
+  margin-top: 2em;
+}
+
+/** Spacing !!! **/
+
+.level0.summary {
+  margin: 2em 0 2em 0;
+}
+
+.level1.summary {
+  margin: 1em 0 1em 0;
+}
